--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,81 @@
 
+
+name: Deploy to Azure
+
+on:
+  push:
+    branches:
+      - master
+env:
+  # basic
+  resourceGroup: kikundi_backend_container
+  location: eastus
+
+  acrName: kikundi.azurecr
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup java 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: ./gradlew build --scan
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      #    - name: Login to DockerHub
+      #      uses: docker/login-action@v1
+      #      with:
+      #        username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to registry
+        uses: docker/login-action@v1
+        with:
+          registry: https://index.docker.io/v1/
+          username: ${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_c90afa951f7441c9adf247d1cb29bf1f }}
+
+      #    - name: Building a composed image
+      #      run: docker-compose up -d
+      - name: Build and push container image to registry
+        run: docker-compose up -d
+
+      - name: Pushing the image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kikundi_backend:latest
+
+  #      uses: docker/build-push-action@v2
+  #      with:
+  #        push: true
+  #        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}/kikundi_backend:${{ github.sha }}
+  #        file: ./Dockerfile
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production app'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'kikundispringboot'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_bd22e62104514c0087fc0ae2557e1178 }}
+          images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}/kikundi_backend:${{ github.sha }}'
