--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-
-
 name: Deploy to Azure
 
 on:
@@ -33,17 +31,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      #    - name: Login to DockerHub
-      #      uses: docker/login-action@v1
-      #      with:
-      #        username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #        password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Log in to registry
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: https://index.docker.io/v1/
-          username: ${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}
-          password: ${{ secrets.AzureAppService_ContainerPassword_c90afa951f7441c9adf247d1cb29bf1f }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      #      - name: Log in to registry
+      #        uses: docker/login-action@v1
+      #        with:
+      #          registry: https://index.docker.io/v1/
+      #          username: ${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}
+      #          password: ${{ secrets.AzureAppService_ContainerPassword_c90afa951f7441c9adf247d1cb29bf1f }}
 
       #    - name: Building a composed image
       #      run: docker-compose up -d
