docker push and building issue plus caching

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
       #          username: ${{ secrets.AzureAppService_ContainerUsername_bf3e13c2f50e437daa5d7da6f9bf2e30 }}
       #          password: ${{ secrets.AzureAppService_ContainerPassword_c90afa951f7441c9adf247d1cb29bf1f }}
 
-      - name: Building a composed image
-        run: docker-compose up -d
+#      - name: Building a composed image
+#        run: docker-compose up -d
 #      - name: Build and push container image to registry
 
       - name: Pushing the image
