--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           java-version: 11
           distribution: 'adopt'
-          cache: gradle
+#          cache: gradle
       - name: Build with Gradle
         run: ./gradlew build --scan
 
@@ -49,13 +49,15 @@ jobs:
 #        run: docker-compose up -d
 #      - name: Build and push container image to registry
 
+      - name: Build and push container image to registry
+        run: docker-compose up -d
+
       - name: Pushing the image
         uses: docker/build-push-action@v2
         with:
           context: ./
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/kikundi_backend:latest
-
   #      uses: docker/build-push-action@v2
   #      with:
   #        push: true
