--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       ddl-auto: update
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/kikundi
+    url: jdbc:postgresql://postgresqldb:5432/kikundi
     username: postgres
     password: shady987654321
     driverClassName: org.postgresql.Driver
