--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 	implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-
 	// https://mvnrepository.com/artifact/com.twilio.sdk/twilio
 	implementation group: 'com.twilio.sdk', name: 'twilio', version: '9.1.4'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.14.1'
+
 }
 
 tasks.named('test') {
