--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       ddl-auto: update
   datasource:
     platform: postgres
-    url: jdbc:postgresql://postgresqldb:5432/kikundi
-    username: postgres
-    password: shady987654321
+    url: jdbc:postgresql://localhost:5432/kikundi     #//${DB_HOST}/${DB_NAME}?useSSL=false
+    username: postgres #${DB_USERNAME}
+    password: shady987654321 #${DB_PASSWORD} #
     driverClassName: org.postgresql.Driver
