--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	// https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java
 	implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+	// https://mvnrepository.com/artifact/javax.mail/mail
+	implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
+
+
+	implementation 'com.sendgrid:sendgrid-java:4.0.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// https://mvnrepository.com/artifact/com.twilio.sdk/twilio
