--- a/pg-deployment.yaml
+++ b/pg-deployment.yaml
@@ -4,10 +4,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-pv-claim # name of PVC essential for identifying the storage data
   labels:
-    app: mysql
+    app: postgres
     tier: database
 spec:
-
   accessModes:
     - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
   resources:
@@ -42,10 +41,10 @@ spec:
             - containerPort: 5432
               name: postgres
           volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
-            - name: mysql-persistent-storage
+            - name: postgres-persistent-storage
               mountPath: /var/lib/postgres #This is the path in the container on which the mounting will take place.
       volumes:
-        - name: mysql-persistent-storage # Obtaining 'vloume' from PVC
+        - name: postgres-persistent-storage # Obtaining 'vloume' from PVC
           persistentVolumeClaim:
             claimName: postgres-pv-claim
 
