finished with the security

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,34 @@ spring:
       ddl-auto: update
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/kikundi     #//${DB_HOST}/${DB_NAME}?useSSL=false
+    url: jdbc:postgresql://localhost:5432/kikundi    #//${DB_HOST}/${DB_NAME}?useSSL=false
     username: postgres #${DB_USERNAME}
     password: shady987654321 #${DB_PASSWORD} #
     driverClassName: org.postgresql.Driver
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+---
+server:
+  port: 8080
+
+spring:
+  profiles:
+    active: dev
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://localhost:5432/kikundi_d    #//${DB_HOST}/${DB_NAME}?useSSL=false
+    username: postgres #${DB_USERNAME}
+    password: shady987654321 #${DB_PASSWORD} #
+    driverClassName: org.postgresql.Driver
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+jwt:
+  secret: javainuse
+secret: javainuse
