--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ dependencies {
 	implementation('io.springfox:springfox-swagger2:3.0.0')
 	implementation('io.springfox:springfox-swagger-ui:3.0.0')
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	// https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas
+//	implementation group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '2.0.0'
+// https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt
+	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.1.RELEASE'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 
 	implementation 'com.sendgrid:sendgrid-java:4.0.1'
