--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/java/com/mingati/kikunditestrepo/Configfile.java
+src/main/java/com/mingati/kikunditestrepo/Configfile.java
 
 ### STS ###
 .apt_generated
