--- a/src/main/resources/db/changelog/changesets/create-user-table.yaml
+++ b/src/main/resources/db/changelog/changesets/create-user-table.yaml
@@ -19,11 +19,11 @@ databaseChangeLog:
                   type: varchar(16)
                   constraints:
                     nullable: false
-              - column:
-                  name: last_name
-                  type: varchar2(32)
-                  constraints:
-                    nullable: false
+#              - column:
+#                  name: last_name
+#                  type: varchar2(32)
+#                  constraints:
+#                    nullable: false
               - column:
                   name: email
                   type: varchar(64)
