--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/
 !**/src/test/**/build/
 src/main/java/com/mingati/kikunditestrepo/Configfile.java
 src/main/java/com/mingati/kikunditestrepo/Configfile.java
+src/main/java/com/mingati/kikunditestrepo/ConfigFile.java
 
 ### STS ###
 .apt_generated
